refactor: update ScreeningService for DTO pattern support