@@ -1,11 +1,14 @@
 package com.cinema.reservation.service;
 
+import com.cinema.reservation.dto.ScreeningCreateRequest;
 import com.cinema.reservation.entity.CinemaHall;
 import com.cinema.reservation.entity.Movie;
 import com.cinema.reservation.entity.Screening;
 import com.cinema.reservation.exception.InvalidScreeningDataException;
 import com.cinema.reservation.exception.ScreeningConflictException;
 import com.cinema.reservation.exception.ScreeningNotFoundException;
+import com.cinema.reservation.repository.CinemaHallRepository;
+import com.cinema.reservation.repository.MovieRepository;
 import com.cinema.reservation.repository.ScreeningRepository;
 import org.junit.jupiter.api.BeforeEach;
 import org.junit.jupiter.api.Test;
@@ -29,6 +32,12 @@ class ScreeningServiceTest {
 
     @Mock
     private ScreeningRepository screeningRepository;
+
+    @Mock
+    private MovieRepository movieRepository;
+
+    @Mock
+    private CinemaHallRepository cinemaHallRepository;
 
     @InjectMocks
     private ScreeningService screeningService;
@@ -59,75 +68,39 @@ class ScreeningServiceTest {
     }
 
     @Test
-    void createScreening_ValidData_Success() {
-        // Given
-        when(screeningRepository.findConflictingScreenings(anyLong(), any(), any()))
-                .thenReturn(Arrays.asList());
+    void createScreeningFromRequest_ValidData_Success() {
+        ScreeningCreateRequest request = new ScreeningCreateRequest();
+        request.setMovieId(1L);
+        request.setHallId(1L);
+        request.setStartTime(LocalDateTime.now().plusDays(1));
+        request.setEndTime(LocalDateTime.now().plusDays(1).plusHours(2));
+        request.setPrice(BigDecimal.valueOf(50));
+
+        when(movieRepository.findById(1L)).thenReturn(Optional.of(testMovie));
+        when(cinemaHallRepository.findById(1L)).thenReturn(Optional.of(testHall));
+        when(screeningRepository.findConflictingScreenings(anyLong(), any(), any())).thenReturn(List.of());
         when(screeningRepository.save(any(Screening.class))).thenReturn(testScreening);
 
-        // When
-        Screening result = screeningService.createScreening(testScreening);
+        Screening result = screeningService.createScreeningFromRequest(request);
 
-        // Then
         assertNotNull(result);
         assertEquals(testMovie, result.getMovie());
-        verify(screeningRepository).save(testScreening);
-    }
-
-    @Test
-    void createScreening_NullStartTime_ThrowsException() {
-        // Given
-        testScreening.setStartTime(null);
-
-        // When & Then
-        assertThrows(InvalidScreeningDataException.class,
-                () -> screeningService.createScreening(testScreening));
-    }
-
-    @Test
-    void createScreening_StartTimeInPast_ThrowsException() {
-        // Given
-        testScreening.setStartTime(LocalDateTime.now().minusDays(1));
-
-        // When & Then
-        assertThrows(InvalidScreeningDataException.class,
-                () -> screeningService.createScreening(testScreening));
-    }
-
-    @Test
-    void createScreening_ConflictingScreening_ThrowsException() {
-        // Given
-        when(screeningRepository.findConflictingScreenings(anyLong(), any(), any()))
-                .thenReturn(Arrays.asList(new Screening()));
-
-        // When & Then
-        assertThrows(ScreeningConflictException.class,
-                () -> screeningService.createScreening(testScreening));
+        verify(screeningRepository).save(any(Screening.class));
     }
 
     @Test
     void findById_ExistingScreening_ReturnsScreening() {
-        // Given
         when(screeningRepository.findById(1L)).thenReturn(Optional.of(testScreening));
-
-        // When
         Optional<Screening> result = screeningService.findById(1L);
-
-        // Then
         assertTrue(result.isPresent());
         assertEquals(testScreening, result.get());
     }
 
     @Test
     void reserveSeats_AvailableSeats_Success() {
-        // Given
         when(screeningRepository.findById(1L)).thenReturn(Optional.of(testScreening));
         when(screeningRepository.save(any())).thenReturn(testScreening);
-
-        // When
         boolean result = screeningService.reserveSeats(1L, 5);
-
-        // Then
         assertTrue(result);
         assertEquals(95, testScreening.getAvailableSeats());
         verify(screeningRepository).save(testScreening);
@@ -135,27 +108,17 @@ class ScreeningServiceTest {
 
     @Test
     void reserveSeats_NotEnoughSeats_ReturnsFalse() {
-        // Given
         testScreening.setAvailableSeats(3);
         when(screeningRepository.findById(1L)).thenReturn(Optional.of(testScreening));
-
-        // When
         boolean result = screeningService.reserveSeats(1L, 5);
-
-        // Then
         assertFalse(result);
         verify(screeningRepository, never()).save(any());
     }
 
     @Test
     void deleteScreening_ExistingScreening_Success() {
-        // Given
         when(screeningRepository.existsById(1L)).thenReturn(true);
-
-        // When
         assertDoesNotThrow(() -> screeningService.deleteScreening(1L));
-
-        // Then
         verify(screeningRepository).deleteById(1L);
     }
 }
